# maze-solver

./: README.md  flake.nix  input.txt  maze-solver.cabal
app/: Main.hs
nix/: hix.nix
